# zero2prod

./: .gitignore  Cargo.toml  Readme.md  configuration.yaml  flake.nix  justfile  treefmt.nix
.sqlx/: query-52e90fd4d0b977a6a1d881cb9577b9c9934d5e94ea282da7a513258d2d0da700.json  query-a0f200e7ab4a9b23eee065f6f4f081fe3b255e572fa522667fb3836a65480484.json  query-b76a1c0cfed7f0866018b227ef154600c446a386c221541e02d0a72e2f0a034c.json
configuration/: base.yaml  local.yaml
kuber/: alloy-values.yaml  helmfile.yaml
kuber/demo/: AlloyConfigMap.yaml  Chart.yaml  alloy-values.yaml  values.yaml
kuber/demo/templates/: ClusterRole.yaml  ConfigMap.yaml  Deployment.yaml  FakePostmarkDeployment.yaml  FakePostmarkService.yaml  Ingress.yaml  MigrationJob.yaml  Service.yaml  ServiceAccount.yaml
kuber/zero2prod/: Chart.yaml  values.yaml
kuber/zero2prod/templates/: ClusterRoleBinding.yaml  ConfigMap.yaml  Deployment.yaml  FakePostmarkDeployment.yaml  FakePostmarkService.yaml  (+3 more)
migrations/: 20241107134533_create_subscription_tokens_table.sql  20241109090614_seed_user.sql  20241109120747_create_idempotency_table.sql  20241114134513_fix-test-admin-password.sql
src/: authentication.rs  configurations.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/fakepostmark/: main.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+11 files in other folders)
