[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ 
  "runtime-tokio", 
  "tls-native-tls",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono"
]}
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"

[dev-dependencies]
reqwest = "0.12.9"

