[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ 
  "runtime-tokio", 
  "tls-native-tls",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono"
]}
config = "0.14.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
log = "0.4.22"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.14"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.19.0"
reqwest = { version ="0.12.9", features = ["json", "native-tls"] }
rand = "0.8.5"
thiserror = "2.0.0"

[dev-dependencies]
fake = "3.0.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.132"
wiremock = "0.6.2"

